--- a/templates/interface/css/admin.css
+++ b/templates/interface/css/admin.css
@@ -24,28 +24,17 @@ padding-top: 20px;
 
 
 .tab-content {
-    float: left;
-    width: 85%;
+    width: 100%;
 }
 
 
 .tab-content > div {
-padding-top: 20px !important;
-padding-left: 35px !important;
-padding-right: 35px !important;
-padding-bottom: 35px !important;
+padding: 0px !important;
 }
 
 
 .tab-content>.active {
     text-align: center;
-    border-top: 2px solid #808080;
-    border-left: 2px solid #808080;
-    border-right: 2px solid #808080;
-    border-bottom: 2px solid #808080;
-	 border-top-right-radius: 8px;
-	 border-bottom-right-radius: 8px;
-	 border-bottom-left-radius: 8px;
     display: block;
     min-height: 1225px; /* IF ADMIN SIDE-MENU LINKS ARE ADDED, THIS MUST BE INCREASED */
 }
@@ -98,5 +87,17 @@ IDs
 	 border-bottom-left-radius: 10px;
 }
 
+
+#admin_wrapper {
+    position: relative !important;
+    margin: 0px !important;
+    padding: 0px !important;
+}
+
+
+/* admin area titles */
+#admin_tab_content .page_title {
+left: -75px !important;
+}
 
 
