--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -301,7 +301,7 @@ border: 1px solid #066000;
 #admin_nav .dropdown-menu, #sidebar, #collapsed_sidebar {
 background: #ccc7c7 !important;
 border: 3px solid #808080 !important;
-color: black;
+color: black !important;
 }
 
 
@@ -311,7 +311,7 @@ border-left: 0px solid #ccc7c7 !important;
 border-top: 3px solid #808080 !important;
 border-right: 3px solid #808080 !important;
 border-bottom: 3px solid #808080 !important;
-color: black;
+color: black !important;
 }
 
 
@@ -328,17 +328,18 @@ border-left: 0px solid #bcafaf !important;
 #sidebar ul p,
 #sidebar p
 {
-color: black;
+color: black !important;
 }
 
 
 #sidebar ul li.sidebar-item a.active,
 .user-nav a.active,
-.admin-nav a.active
+.admin-nav a.active,
+#sidebar ul li.active a.nav-link.active
 {
 background-color: #606060 !important;
 color: white !important;
-border-radius: 3px;
+border-radius: 3px !important;
 }
 
 
@@ -347,16 +348,7 @@ border-radius: 3px;
 #collapsed_sidebar div.active,
 #sidebar a[aria-expanded="true"]
 {
-    background: #bcafaf;
-}
-
-
-#sidebar ul ul a:hover,
-#sidebar ul li.active a:hover,
-#sidebar ul li a:hover,
-#collapsed_sidebar .dropdown-menu a:hover
-{
-    background: #aaa2a2 !important;
+    background: #bcafaf !important;
 }
 
 
@@ -373,6 +365,16 @@ border: 3px solid #808080 !important;
 #sidebar_menu ul.dropdown-menu a[aria-expanded="true"]
 {
     background: #d3d3d3 !important;
+}
+
+
+#sidebar ul ul a:hover,
+#sidebar ul li.active a:hover,
+#sidebar ul li a:hover,
+#collapsed_sidebar .dropdown-menu a:hover,
+#sidebar ul li.active ul.dropdown-menu a.dropdown-item.secondary-select
+{
+    background: #aaa2a2 !important;
 }
 
 
