--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -166,6 +166,7 @@ CLASSES
 text-transform: uppercase;
 writing-mode: vertical-lr;
 text-orientation: upright;
+white-space: nowrap;
     text-align: center;
     display: inline;
     position: absolute;
@@ -718,7 +719,7 @@ margin-right: 6px;
 position: relative;
 display: none;
 padding: 6px;
-width: 100%;
+width: 90%;
 font-size: 21px;
 min-height: 23px; 
 margin: auto;
@@ -731,7 +732,7 @@ z-index: 3;
 #app_loading {
 display: block;
 padding: 13px;
-width: 100%; 
+width: 90%; 
 white-space: nowrap;
 font-size: 60px;
 margin: auto;
@@ -858,8 +859,8 @@ cursor: pointer;
 }
 
 
-#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, #sys_stats_admin_link_info, #header_size_warning, .hidden {
-display: none;
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .hidden {
+display: none !important;
 }
 
 
@@ -1005,8 +1006,8 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
 /* Custom 3-deep (last) sub-menu */
 #sidebar_menu .dropdown-menu {
 left: 4px !important;
-min-width: 337px;
-max-width: 337px;
+min-width: 242px;
+max-width: 242px;
 }
 
 
