small fix on app reload logic, moved privacy mode toggle to sidebar
small fix on app reload logic, moved privacy mode toggle to sidebar

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -668,6 +668,11 @@ IDs
 ////////////////////////////// */
 
 
+#pm_link_icon_div {
+background: #dd7c0d;
+}
+
+
 #primary_wrapper.wrapper {
     display: flex;
     width: 100%;
