--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -18,6 +18,7 @@ padding: 0px;
 body {
 margin: 0px;
 width: auto;
+font-weight: 400 !important;
 }
 
 
@@ -112,7 +113,7 @@ height: 15px !important;
 
 
 button, input[type=submit], input[type=button], .force_button_style {
-  color: white;
+  color: white !important;
   padding: 5px 10px;
   text-align: center;
   font-weight: bold;
@@ -674,35 +675,36 @@ margin-top: 30px !important;
 
 /*  https://jsfiddle.net/TheAL/ednxgwrj/  */
 .footer_banner_button {
-    background: none;
-    padding: 0;
-    border: none;
+    background: none !important;
+    padding: 0 !important;
+    border: none !important;
 }
 .footer_banner_button:hover {
-    text-decoration: underline;
-    cursor: pointer;
+    text-decoration: underline !important;
+    cursor: pointer !important;
 }
 .footer_banner {
-    font-size: 15px;
-    line-height: 30px;
-    padding: 10px 5px;
+    font-size: 15px !important;   
+    font-weight: 400 !important;
+    line-height: 30px !important;
+    padding: 10px 5px !important;
     position: fixed;
     bottom: 0;
     left: 0;
     display: none;
-    width: 100%;
-    text-align: center;
-    color: #000;
-    background: #efc551;
-    z-index: 9999;
+    width: 100% !important;
+    text-align: center !important;
+    color: #000 !important;
+    background: #efc551 !important;
+    z-index: 9999 !important;
 }
 .footer_banner .footer_banner_button {
-    display: inline-block;
+    display: inline-block !important;
     line-height: 30px;
     margin-left: 10px;
-    padding: 0 15px;
-    color: #000;
-    background: #b9ff35;
+    padding: 0 15px !important;
+    color: #000 !important;
+    background: #b9ff35 !important;
 }
 
 
@@ -743,6 +745,11 @@ margin: 0px;
 #secondary_wrapper.active {
     width: calc(100% - 60px);
     left: 60px !important;
+}
+
+
+#secondary_wrapper ul > li {
+margin: 10px;
 }
 
 
@@ -902,11 +909,6 @@ cursor: pointer;
 padding-left: 5px;
 padding-right: 5px;
 cursor: pointer;
-}
-
-
-#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .hidden {
-display: none !important;
 }
 
 
@@ -1185,6 +1187,11 @@ border-radius: 0px !important;
 /* Remove caret icon from drop-down menu items */
 #collapsed_sidebar .dropdown-toggle::after {
  display: none !important;
+}
+
+
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, .hidden {
+display: none;
 }
 
 
