--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -182,7 +182,7 @@ color: #ea6b1c !important;
 }
 
 
-.blue, td.blue, td.blue span.blue, td select, .btn-link, .btn-link a, .btn-link:hover {
+.blue, td.blue, td.blue span.blue, td select, .btn-link, .btn-link a, .btn-link:hover, #sidebar ul.list-unstyled li a.blue:link {
 color: #1a1696 !important;
 }
 
