Fixed Desktop Edition compatibility, removed hotbit support, UX, cleanup
Fixed Desktop Edition compatibility, removed hotbit support, UX, cleanup

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -57,7 +57,7 @@ margin-bottom: 15px;
 
 
 select {
-appearance: none !important;  /* for hiding default arrow */
+-webkit-appearance: none !important;  /* for hiding default arrow...use webkit version for compatibility with desktop editions */
 line-height: 15px !important;
 height: 25px !important;
 min-width: 95px !important;
