--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -29,7 +29,10 @@ border-collapse: separate;
 
 td {
 margin: 0px;
-padding: 4px;
+padding-top: 1px;
+padding-bottom: 1px;
+padding-left: 4px;
+padding-right: 4px;
 white-space: nowrap;
 vertical-align: middle !important;
 line-height: 1.15 !important;
