--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -27,19 +27,15 @@ border-collapse: separate;
 }
 
 
-td {
-margin: 0px;
-padding-top: 2px;
-padding-bottom: 2px;
-padding-left: 4px;
-padding-right: 4px;
-white-space: nowrap;
+th, td.data {
+margin: 0px !important;
+padding-top: 0.25em !important;
+padding-bottom: 0.25em !important;
+padding-left: 0.75em !important;
+padding-right: 0.75em !important;
+white-space: nowrap !important;
 vertical-align: middle !important;
 line-height: 1.15 !important;
-}
-
-th {
-padding-right: 28px;
 }
 
 
@@ -65,7 +61,7 @@ padding: .07rem 1.4rem .07rem .5rem !important;
 }
 
 td .custom-select {
-min-width: 100%;
+min-width: 100% !important;
 }
 
 
@@ -100,6 +96,7 @@ textarea[data-autoresize] {
 
 input, select, textarea {
 border: 1px solid #808080 !important;
+line-height: 1.3em !important;
 }
 
 
@@ -111,8 +108,8 @@ border-radius: .25rem !important;
 input[type=checkbox], input[type=radio] {
 position: relative;
 top: 3px;
-width: 15px !important;
-height: 15px !important;    
+width: 1em !important;
+height: 1em !important;    
 }
 
 
@@ -500,8 +497,12 @@ text-align:center;
 
 
 .portfolio_summary {
-margin-top: 2px;
-margin-bottom: 2px;
+margin: 0.85em;
+}
+
+
+img.tooltip_style_control {
+height: 1em !important;
 }
 
 
@@ -679,15 +680,6 @@ margin-top: 10px !important;
 
 
 /*  https://jsfiddle.net/TheAL/ednxgwrj/  */
-.footer_banner_button {
-    background: none !important;
-    padding: 0 !important;
-    border: none !important;
-}
-.footer_banner_button:hover {
-    text-decoration: underline !important;
-    cursor: pointer !important;
-}
 .footer_banner {
     font-size: 15px !important;   
     font-weight: 400 !important;
@@ -703,16 +695,25 @@ margin-top: 10px !important;
     background: #efc551 !important;
     z-index: 9999 !important;
 }
-.footer_banner .footer_banner_button {
-    display: inline-block !important;
-    line-height: 30px;
-    margin-left: 10px;
-    padding: 0 15px !important;
+.footer_banner a:link, .footer_banner a:visited, .footer_banner a:hover, .footer_banner a:active {
+    color: black !important;
+}
+.footer_banner_button {
+    background: none !important;
+    padding: 0 !important;
+    border: none !important;
+    display: block !important;
+    line-height: 1.3em;
+    margin: auto;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    padding: 0.3em !important;
     color: #000 !important;
     background: #b9ff35 !important;
 }
-.footer_banner a:link, .footer_banner a:visited, .footer_banner a:hover, .footer_banner a:active {
-    color: black !important;
+.footer_banner_button:hover {
+    text-decoration: underline !important;
+    cursor: pointer !important;
 }
 
 
@@ -1014,10 +1015,7 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
 
 #sidebar .sidebar-header {
      position: relative;
-    padding-top: 7px;
-    padding-left: 7px;
-    padding-right: 7px;
-    padding-bottom: 0px;
+    padding: 0px;
     margin: auto;
 }
 
@@ -1037,12 +1035,11 @@ height: calc(1.5rem + calc(var(--bs-border-width) * 2));
     padding-right: 7px;
     padding-bottom: 0px;
     margin: auto;
-    font-size: 13px !important;
 }
 
 
 #sidebar ul.components {
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 
